--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-argon2-cffi==21.3.0
-cryptography==41.0.1
-pyperclip==1.8.2
+argon2-cffi==25.1.0
+cryptography==45.0.4
+pyperclip==1.9.0
+textual==3.5.0
